--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Echo</title>
+    
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    
+    <meta name="theme-color" content="#050505">
+    <link rel="apple-touch-icon" href="/favicon.png">
   </head>
   <body>
     <div id="root"></div>
